[gd_scene load_steps=3 format=3 uid="uid://d3x5y4m0vcnya"]

[ext_resource type="Texture2D" uid="uid://bjemiwec57sg1" path="res://assets/2D/MageCard.png" id="1_bp8a4"]
[ext_resource type="Script" uid="uid://cs8jakeore78v" path="res://scenes/buildings/building_info.gd" id="1_dg2gv"]

[node name="BuildingInfo" type="Panel"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -662.0
offset_top = -386.0
offset_right = -148.0
offset_bottom = 425.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dg2gv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuildingName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "tes"
horizontal_alignment = 1

[node name="BuildingIcon" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("1_bp8a4")

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Building_Description" type="RichTextLabel" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "fdasfdsafdsafdsafdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_top = 4.0
offset_right = -11.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Close"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
